--- a/public/stt_recognize.html
+++ b/public/stt_recognize.html
@@ -290,7 +290,8 @@
   <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
   <script>
     const LOCAL_URL = "http://localhost:1090/speech-to-text/api/v1/";
-    const BRIDGE_URL = "http://localhost:3000/";
+    // const BRIDGE_URL = "http://localhost:3000/";
+    const BRIDGE_URL = "../";
 
     new Vue({
       el: '#app',
