--- a/public/stt_customizations.html
+++ b/public/stt_customizations.html
@@ -617,7 +617,7 @@
   <script>
     const LOCAL_URL = "http://localhost:1090/speech-to-text/api/v1/";
     // const BRIDGE_URL = "http://localhost:3000/";
-    const BRIDGE_URL = "../";
+    const BRIDGE_URL = "./";
 
     new Vue({
       el: '#app',
